提升1.0.1版本，并新增业务级异常code及msg赋值

--- a/core/src/main/resources/openApi/i18n/error/error_zh_CN.properties
+++ b/core/src/main/resources/openApi/i18n/error/error_zh_CN.properties
@@ -90,6 +90,8 @@ ISV_SERVICE_ERROR=isv.***-service-error:###
 
 101=\u65e0\u6548\u4e1a\u52a1\u53c2\u6570
 
+1000=\u4e1a\u52a1\u9519\u8bef
+
 
 #\u5e73\u53f0\u7ea7\u5b50\u9519\u8bef
 isp.***-service-unavailable=\u8c03\u7528\u540e\u7aef\u670d\u52a1{0}\u629b\u5f02\u5e38\uff0c\u670d\u52a1\u4e0d\u53ef\u7528{1}
