新增BUSSINESS_ERROR配置项

--- a/core/src/main/resources/openApi/i18n/error/error_en.properties
+++ b/core/src/main/resources/openApi/i18n/error/error_en.properties
@@ -29,6 +29,9 @@
 
 101=Invalid Business Parameter
 
+#\u4e1a\u52a1\u7ea7\u9519\u8bef(\u7236\u7ea7)
+BUSSINESS_ERROR=1000
+
 #\u5e73\u53f0\u7ea7\u5b50\u9519\u8bef
 isp.***-service-unavailable=call the back-end service {0} thrown exception, the service is unavailable
 isp.remote-service-error=connect to a remote service error
