新增rest接口用户访问权限控制

--- a/core/src/main/resources/rest/i18n/msg/msg_zh_CN.properties
+++ b/core/src/main/resources/rest/i18n/msg/msg_zh_CN.properties
@@ -13,6 +13,9 @@ PARAMETER_ERROR=43
 INVALID_PARAM_SERVICE_ID=11
 11=\u65e0\u6548serviceId
 
+INSUFFICIENT_USER_PERMISSIONS=12
+12=\u7528\u6237\u6743\u9650\u4e0d\u8db3
+
 INVALID_PARAM_REQUEST_BODY_FORMAT=23
 23=\u53c2\u6570\u6307\u5b9a\u65e0\u6548\u8bf7\u6c42\u4f53\u6570\u636e\u683c\u5f0f
 
@@ -61,7 +64,8 @@ ISV_REQUEST_DATA_PARSE_ERROR=isv.request-data-parse-error
 isv.request-data-parse-error=\u8bf7\u6c42\u6570\u636e\u89e3\u6790\u9519\u8bef
 
 
-
+ISV_INVALID_PERMISSION=isv.invalid-permission
+isv.invalid-permission=\u6743\u9650\u4e0d\u591f\u3001\u975e\u6cd5\u8bbf\u95ee
 
 
 
