rest接口新增签名校验支持

--- a/core/src/main/resources/rest/i18n/msg/msg_zh_CN.properties
+++ b/core/src/main/resources/rest/i18n/msg/msg_zh_CN.properties
@@ -13,6 +13,12 @@ PARAMETER_ERROR=43
 INVALID_PARAM_SERVICE_ID=11
 11=\u65e0\u6548serviceId
 
+INVALID_APP_KEY=29
+29=\u65e0\u6548\u7684AppKey\u53c2\u6570
+
+INVALID_SIGNATURE=26
+26=\u65e0\u6548\u7b7e\u540d
+
 INSUFFICIENT_USER_PERMISSIONS=12
 12=\u7528\u6237\u6743\u9650\u4e0d\u8db3
 
