--- a/core/src/main/resources/rest/i18n/msg/msg_zh_CN.properties
+++ b/core/src/main/resources/rest/i18n/msg/msg_zh_CN.properties
@@ -16,6 +16,9 @@ INVALID_PARAM_SERVICE_ID=11
 INVALID_APP_KEY=29
 29=\u65e0\u6548\u7684AppKey\u53c2\u6570
 
+INVALID_TIMESTAMP=31
+31=\u975e\u6cd5\u7684\u65f6\u95f4\u6233\u53c2\u6570
+
 INVALID_SIGNATURE=26
 26=\u65e0\u6548\u7b7e\u540d
 
